--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,122 @@ a {
     color: var(--primary-color);
     text-transform: capitalize;
 }
+
+/* * Home */
+.home-wrapper {
+    display: flex;
+    align-items: flex-start;
+}
+
+.home-wrapper .description {
+    flex: 1;
+    padding-top: 50px;
+}
+
+.home-wrapper .description .title {
+    font-weight: 600;
+    font-size: 64px;
+    line-height: 80px;
+    color: #000000;
+}
+
+.home-wrapper .description p {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    color: #8F95A5;
+    margin: 40px 0 60px;
+}
+
+.home-wrapper .image {
+    flex: 1;
+}
+
+.home-wrapper .image img {
+    width: 100%;
+    height: 100%;
+}
+
+/* * Skills */
+#skills .title {
+    text-align: center;
+    margin-bottom: 92px;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 80px;
+    color: #000000;
+}
+
+.skills-wrapper {
+    display: flex;
+    gap: 18px;
+}
+
+.skills-wrapper .speaking {
+    flex: 1;
+    min-width: 435px;
+    max-height: fit-content;
+}
+
+.skills-wrapper .speaking .image {
+    max-height: 390px;
+}
+
+.skills-wrapper .other {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    flex: 2;
+}
+
+.skills-wrapper .other .top {
+    display: flex;
+    gap: 18px;
+}  
+
+.skills-wrapper .other .bottom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 35px 22px;
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.skills-wrapper .other .bottom .bottom-left{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.skills-wrapper .child {
+    display: flex;
+    flex-direction: column;
+    padding: 35px 22px;
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.skills-wrapper .child .image {
+    flex: 1;
+}
+
+.skills-wrapper .child .image img {
+    width: 100%;
+    height: 100%;
+}
+
+.skills-wrapper .child h4 {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 80px;
+    color: #263238;
+}
+
+.skills-wrapper .child p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #8F95A5;
+    margin-bottom: 36px;
+}
